03/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw03-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw03-app
  template:
    metadata:
      labels:
        app: hw03-app
    spec:
      containers:
      - name: hw03
        image: perevozov/arch:3
        ports:
        - name: web 
          containerPort: 8000
