03/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw03-app
  labels: 
    app: hw03-app
spec:
  selector:
    app: hw03-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: serviceport
  type: NodePort
