03/kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hw03-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: bit.homework
    http:
      paths:
        - path: /bitapp/perevozov/hw03($|/)(.*)
          backend:
            serviceName: hw03-app
            servicePort: 80
